assets/css/style.css
/* general */
@import url("reset.css");

html {
  overflow-y: scroll;
  scroll-behavior: smooth;
  /* background: black; */
} 

body {
  /* font-family: 'Playfair Display', serif; */
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  line-height: 34px;
  color: #686868;
  font-weight: bold;

}

* {
  box-sizing: border-box;
  margin: 0;
}

html,
body {
  height: 100%;
}

.wrapper {
  height: auto !important;
  height: 100%;
  min-height: 100%;
  margin: 0 auto -100px;
}

.container {
  width: 100%;
  max-width: 980px;
  margin: 0 auto;
  clear: both;;
}

h1,
h2,
h3,
p {
  margin-bottom: 20px;
}

p:last-child {
  margin-bottom: 0;
}

h1,
h2,
h3 {
  /* font-family: 'Playfair Display', serif; */
  font-family: 'Lato', sans-serif;
  font-weight: 700;
  /* color:#4169e1; */
  color: black;
}

h1 {
  padding-bottom: 20px;
  font-size: 30px;
  line-height: 49px;
  /* border-bottom: 3px solid #4169e1; */
  border-bottom: 3px solid black
  /* text-shadow: 4px 4px 4px #aaa; */
}

h2,
h3 {
  font-size: 22px;
}

h4 {
  padding-bottom: 20px;
  font-size: 20px;
  
}


/* header */
#master { 
  /* background: url("../images/logo.png");  */
  background-image: url("../../assets/images/logo.jpg");
  position: fixed;
  z-index: 99;
  width: 100%;
  padding: 20px;
  margin: 0 0 20px;
  overflow: auto;
  background-repeat: no-repeat;
  /* color: #4169e1; */
  color: black;
  
  /* background: #fff; */ 
}

#navigation {
  margin-right: 200px;
}

/* removed text associated to logo id */
#logo{
  color:#fff;
  text-align: center;
  text-decoration: none;
  margin-right: 200px;
  padding: 15px; 
  /* font-family: 'Tangerine', serif;  */
  font-family: 'Lato', sans-serif;
  /* font-family: 'Parisienne', cursive; */
  font-size: 50px;
  line-height: 60px;
}
#zlogo {

  text-decoration: none;
  font-size: 50px;
  font-family: 'Open Sans', sans-serif;
  font-size: 90px;
}
#sublogo{
  text-align: left;
  color:#fff;
  font-size: 30px;
  font-family: 'Tangerine', serif; 
  letter-spacing: 10px;
}


/* navigation section */

#navPic{
  background: #fff;
  width: 22px;
  height: auto;
  border-radius: 30%
}

nav {
  float: right;
  margin-top: 225px;
}

nav li {
  display: inline-block;
  padding-left: 5px;
  margin-left: 5px;
  margin-top: 10px;
  line-height: 10px;
  /* color: #4169e1; */
  color:black
}

nav a {
  font-weight: bold;
  font-size: 25px;
  /* color: #53900F; */
  /* color: #4169e1; */
  color:#fff;
  text-decoration: none;
  /* color: #4169e1; */
  color:black
}

nav li:first-child {
  padding-left: 0;
  margin-left: 0;
  border-left: 0 none;
}

/* main section */
main {
  padding-top: 130px;
}

.main-section-about,
.main-section-portfolio,
.main-section-contact{
  float: left; 
  width: 100%;
  /* max-width: 950px; */
  max-width: 1400px;
  height:auto;  
  padding: 30px;
  margin-top: 170px; 
  margin-bottom: 200px;
  background: #fff;
  text-align:justify;
  font-size: 16px;
  opacity: 0.92;
}


/* about me section */
.aboutImg{
  float: left;
  width: 200px;
  height: 250px;
  margin-top: 10px;
  margin-right: 25px;
}

/* portfolio section */
.work {
  position: relative;
  float: left; 
  width: 300px;
  margin-bottom:15px; 
  /* overflow: auto; */
  /* border: 1px solid #4169e1; */
  border: 1px solid black;
  border-radius: 0.5%
}

.work:nth-child(even) {
  margin-right: 40px;
}

.work img {
  /* width: 100%; */
  width:296px;
  height:150px;
  border: 0 none;
  opacity: 0.8; 
}

.work h3 {
  position: absolute;
  bottom: -10px;
  width: 100%;
  padding: 5px;
  margin-bottom: 10px;
  font-weight: 300;
  line-height: 30px;
  /* color:  #4169e1; */
  color:black;
  font-weight: bold;
  text-align: center;
  background: white;
  border-bottom: 0;
}

/* flow */
#stop{
  float: left; 
  width: 100%;
  height: 70px;
  padding: 150px;
}

/* Media Query */
@media only screen and (max-width:980px) {
  nav {
    margin-right: 5px;
  }
}


@media only screen and (max-width: 768px) {
  .main-section
  .main-section-about,
  .main-section-portfolio,
  .main-section-contact,
  .sidebar {
    max-width: 100%;
  }
 
  main {
    overflow: auto;
  }

  .work {
    width: 47%;
    margin-bottom: 10px;
  }

  .work:nth-child(even) {
    margin-right: 0;
  }

  .work:nth-child(odd) {
    float: right;
  }

  .aboutImg{
    width: 50%;
  }

  .sidebar {
    margin-bottom: 40px;
  }
}

@media only screen and (max-width: 640px){
  body {
    background: none
  }
  .main-section-about,
  .main-section-portfolio,
  .main-section-contact{
    margin-top:130px;
  }
  #master{
    position: fixed;
    top: 0;
    right: 0;
    margin: 0;
    padding: 0;
  }
 

  header .container {
    padding: 0;
  }

  main.container {
    padding-top: 0;
  }

  #logo,
  .work,
  .aboutImg{
    width: 100%;
  }

  nav {
    position: static; 
    width: 100%;
    margin: 15px 0;
    text-align: center;
  }

  nav a {
    width: 30%;
    padding-left: 0;
    margin-left: 0;
  }
}

